--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="./assets/main.js"></script>
 </head>
 
 <body>
@@ -38,28 +39,29 @@
         <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
           <div class="sm:text-center lg:text-left">
             <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-              <span class="block xl:inline">Oscar Barajas</span>
-              <span class="block text-indigo-600 xl:inline">@gndx</span>
+              <span class="block xl:inline">Welcome to</span>
+              <span class="block text-indigo-600 xl:inline">Youtube API test</span>
             </h1>
-            <p
-              class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              Foundation Layer at Platzi - Microsoft MVP - Lead at Developer Circles from Meta, I teach React & Svelte -
-              #Web3 #BTC
-              #ETH - #Twitch Partner - 🇲🇽 🇨🇴</p>
+            <p  class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+              In this exercise, I'm using javascript async functions
+               and fetch() method to receive data object from youtube.<br><br>
+              Enjoy the Best Motivational Speech Videos of the year! &#128170;&#128165; 
+            </p>
           </div>
         </main>
       </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="https://arepa.s3.amazonaws.com/oscar-barajas-gndx.png" alt="">
+        src="./assets/img/HD-wallpaper-hiker-mountain-on-top-of.jpg" alt="">
     </div>
   </div>
   <div class="bg-white">
     <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
-      <h2 class="text-2xl font-extrabold tracking-tight text-gray-900">Last YouTube Videos</h2>
+      <h2 class="text-2xl font-extrabold tracking-tight text-gray-900">Last YouTube Videos:</h2>
       <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8" id="content">
         <!-- content -->
+        
       </div>
     </div>
   </div>
